--- a/BrhatMrdanga/app/src/main/res/layout/activity_main.xml
+++ b/BrhatMrdanga/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:paddingBottom="30dp"
-                android:text="Brhat Mrdanga"
+                android:text="Brihat Mridanga"
                 android:textAlignment="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="25sp"
