--- a/BrhatMrdanga/app/src/main/res/layout/activity_team_rankings.xml
+++ b/BrhatMrdanga/app/src/main/res/layout/activity_team_rankings.xml
@@ -33,7 +33,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/roboto_medium"
-            android:text="MEMBER"
+            android:text="TEAM"
             android:textAllCaps="true"
             android:textColor="@color/white_70"
             android:textSize="14sp"
