--- a/BrhatMrdanga/app/src/main/res/layout/fragment_signup.xml
+++ b/BrhatMrdanga/app/src/main/res/layout/fragment_signup.xml
@@ -64,8 +64,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:text="Upload Profile Picture"
                         android:fontFamily="@font/roboto_medium"
+                        android:text="Upload Profile Picture"
                         android:textColor="@color/colorAccent"
                         android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,8 +89,8 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_phone"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_phone"
                 app:layout_constraintTop_toBottomOf="@+id/card_view_upload_profile_pic" />
 
             <TextView
@@ -125,8 +125,8 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_phone"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_phone"
                 app:layout_constraintTop_toBottomOf="@+id/et_signup_zone_type" />
 
             <TextView
@@ -162,8 +162,8 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_phone"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_phone"
                 app:layout_constraintTop_toBottomOf="@+id/et_signup_member_type" />
 
             <EditText
@@ -200,8 +200,8 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_phone"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_phone"
                 app:layout_constraintTop_toBottomOf="@+id/et_login_folkid" />
 
             <EditText
@@ -238,7 +238,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/et_signup_first_name"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_email"
                 app:layout_constraintTop_toBottomOf="@+id/et_signup_admin_number" />
 
             <EditText
@@ -272,7 +272,7 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_email"
                 app:layout_constraintStart_toStartOf="@+id/et_signup_last_name"
                 app:layout_constraintTop_toBottomOf="@+id/et_signup_admin_number" />
 
@@ -288,12 +288,12 @@
                 android:inputType="textEmailAddress"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_email"
                 app:layout_constraintStart_toEndOf="@+id/et_signup_first_name"
                 app:layout_constraintTop_toBottomOf="@+id/tv_signup_first_name" />
 
             <TextView
-                android:id="@+id/tv_login_email"
+                android:id="@+id/tv_signup_email"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -306,12 +306,12 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_email"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_email"
                 app:layout_constraintTop_toBottomOf="@+id/et_signup_first_name" />
 
             <EditText
-                android:id="@+id/et_login_email"
+                android:id="@+id/et_signup_email"
                 style="@style/StyleEditText"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -325,10 +325,10 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_login_email" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_email" />
 
             <TextView
-                android:id="@+id/tv_login_phone"
+                android:id="@+id/tv_signup_phone"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -341,12 +341,12 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
-                app:layout_constraintTop_toBottomOf="@+id/et_login_email" />
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_email"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_email"
+                app:layout_constraintTop_toBottomOf="@+id/et_signup_email" />
 
             <EditText
-                android:id="@+id/et_login_phone"
+                android:id="@+id/et_signup_phone"
                 style="@style/StyleEditText"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -360,7 +360,7 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_login_phone" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_phone" />
 
             <TextView
                 android:id="@+id/tv_login_password"
@@ -376,9 +376,9 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
-                app:layout_constraintTop_toBottomOf="@+id/et_login_phone" />
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_phone"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_phone"
+                app:layout_constraintTop_toBottomOf="@+id/et_signup_phone" />
 
             <EditText
                 android:id="@+id/et_login_password"
@@ -413,25 +413,26 @@
                 android:text="By creating an account you accept to our Terms and Conditions!"
                 android:textColor="@color/colorAccent"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toTopOf="@+id/btn_create_event_invite_people"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_folkid"
-                app:layout_constraintStart_toStartOf="@+id/et_login_folkid"
+                app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_email"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_email"
                 app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
 
             <Button
-                android:id="@+id/btn_create_event_invite_people"
+                android:id="@+id/btn_create_account"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="40dp"
                 android:background="@drawable/bg_button"
+                android:onClick="createAccount"
                 android:text="CREATE ACCOUNT"
                 android:textColor="@color/colorLightBlue"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-                app:layout_constraintStart_toStartOf="@+id/et_login_email"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_phone"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_phone"
                 app:layout_constraintTop_toBottomOf="@+id/tv_signup_terms" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
