--- a/BrhatMrdanga/app/src/main/res/layout/item_profile_place.xml
+++ b/BrhatMrdanga/app/src/main/res/layout/item_profile_place.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/img_profile_pic"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="2dp"
@@ -60,7 +60,7 @@
         android:padding="0dp"
         android:text="Place Name"
         android:textColor="@color/colorBlack"
-        android:textSize="17sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tv_date"
         app:layout_constraintStart_toEndOf="@+id/img_profile_pic"
@@ -72,11 +72,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:ellipsize="end"
         android:marqueeRepeatLimit="marquee_forever"
         android:maxLines="2"
         android:text="Books Sold"
         android:textColor="@color/colorSubtitle"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_count"
         app:layout_constraintStart_toStartOf="@+id/tv_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
